# FileParse

./: .clang-format  .gitignore  CMakeLists-XMLParser.txt  CMakeLists-XMLParser.txt.in  CMakeLists-xmlParser.txt  CMakeLists-xmlParser.txt.in  CMakeLists.txt  CMakeListsGTest.txt.in  Claude.md  JSON_IMPLEMENTATION_NOTES.md  README.md
.github/workflows/: ci.yml
doc/: FileParse.md  FileParse.md.in
docs/examples/: attributes.md  basic-types.md  containers.md  custom-types.md  enums.md  optional-variant.md
include/fileParse/: Array.hxx  Attributes.hxx  Base.hxx  CMakeLists.txt  Common.hxx  Enum.hxx  FileDataHandler.hxx  FileFormat.hxx  Formatter.cxx  Formatter.hxx  INodeAdapter.hxx  Map.hxx  (+9 more)
src/: Base.hxx  CMakeLists.txt  Common.hxx  CommonSerializer.hxx  Enum.hxx  FP_Array.hxx  FP_Base.hxx  FP_Common.hxx  FP_Enum.hxx  FP_Formatter.cxx  FP_Formatter.hxx  FP_INodeAdapter.hxx  FP_Map.hxx  FP_Optional.hxx  FP_Set.hxx  FP_StringConversion.hxx  FP_Variant.hxx  FP_Vector.hxx  FP_XMLNodeAdapter.cxx  FP_XMLNodeAdapter.hxx  Map.hxx  Optional.hxx  Set.hxx  StringConversion.hxx  Variant.hxx  Vector.hxx  XMLNodeAdapter.cxx  XMLNodeAdapter.hxx
test/: BaseSerializers.unit.cxx  CMakeLists.txt  EnumSerializers.unit.cxx  VectorSerializers.unit.cxx
test/data/: Attributes.json  Attributes.xml  BaseElement.json  BaseElement.xml  CMAElement.json  CMAElement.xml  EnumElement.json  EnumElement.xml  EnumElementMissing.json  EnumElementMissing.xml  MapDouble.json  MapDouble.xml  MapEmptyOptionalString.json  MapEmptyOptionalString.xml  MapEnumAsKey.json  MapEnumAsKey.xml  MapEnumString.json  MapEnumString.xml  MapOptionalString.json  MapOptionalString.xml  MapString.json  MapString.xml  SetWithTableDouble.json  SetWithTableDouble.xml  SetWithTableEmpty.json  SetWithTableEmpty.xml  SetWithTableEnum.json  SetWithTableEnum.xml  SetWithTableOptional.json  SetWithTableOptional.xml  VariantInParentNode.json  VariantInParentNode.xml  VectorElement.json  VectorElement.xml  VectorEnum.json  VectorEnum.xml  VectorOptional.json  VectorOptional.xml
test/helper/: FileManipulation.cxx  FileManipulation.hxx  MockNodeAdapter.cxx  MockNodeAdapter.hxx  TestBaseElementXML.cxx  TestBaseElementXML.hxx  TestEnumElementXML.cxx  TestSerializers.cxx  TestSerializers.hxx  TestStructures.hxx  TestVectorElementXML.cxx  TestVectorElementXML.hxx  TestXML.cxx  TestXML.hxx  Utility.hxx  UtilityCMA.hxx
test/helper/files/: Attributes.cxx  Attributes.hxx  AttributesXML.cxx  AttributesXML.hxx  BaseElement.cxx  BaseElement.hxx  BaseElementJSON.cxx  BaseElementJSON.hxx  BaseElementXML.cxx  BaseElementXML.hxx  EnumElement.cxx  EnumElement.hxx  EnumElementJSON.cxx  EnumElementJSON.hxx  EnumElementXML.cxx  EnumElementXML.hxx  MapElement.cxx  MapElement.hxx  MapElementJSON.cxx  MapElementJSON.hxx  MapElementXML.cxx  MapElementXML.hxx  SetElement.cxx  SetElement.hxx  SetElementJSON.cxx  SetElementJSON.hxx  SetElementXML.cxx  SetElementXML.hxx  TestEnumElementXML.cxx  TestVectorElementXML.cxx  VariantElement.cxx  VariantElement.hxx  VariantElementJSON.cxx  VariantElementJSON.hxx  VariantElementXML.cxx  VariantElementXML.hxx  VectorElement.cxx  VectorElement.hxx  VectorElementJSON.cxx  VectorElementJSON.hxx  (+2 more)
test/helper/serializers/: BaseElementSerializers.cxx  EnumSerializers.cxx  SerializerAttributes.hxx  SerializerCMAEnumOptions.hxx  SerializerCMAOptions.hxx  SerializerCMAStringOptions.hxx  SerializerCMAValues.hxx  SerializersBaseElement.cxx  SerializersBaseElement.hxx  SerializersEnum.cxx  SerializersEnum.hxx  SerializersLanguages.hxx  SerializersMap.cxx  SerializersMap.hxx  SerializersSet.cxx  SerializersSet.hxx  SerializersVariant.hxx  SerializersVector.cxx  SerializersVector.hxx  SetSerializers.cxx  SetSerializers.hxx  TestBaseElementSerializers.cxx  TestBaseElementSerializers.hxx  TestEnumSerializers.cxx  TestEnumSerializers.hxx  TestVectorSerializers.cxx  TestVectorSerializers.hxx  VectorSerializers.cxx  VectorSerializers.hxx
test/helper/structures/: Attributes.hxx  CMAEnumOptions.hxx  CMAOptions.hxx  CMAOptionsHash.hxx  CMAStringOptions.hxx  CMAValues.hxx  Enums.cxx  Enums.hxx  StructureBase.hxx  StructureEnum.hxx  StructureLanguages.hxx  StructureMap.hxx  StructureSet.hxx  StructureVariant.hxx  StructureVector.hxx
test/units/: ArraySerializers.unit.cxx  AttributesSerializers.unit.cxx  AttributesSerializersFile.unit.cxx  AttributesSerializersJSON.unit.cxx  BaseSerializers.unit.cxx  BaseSerializersFile.unit.cxx  BaseSerializersJSON.unit.cxx  BaseSerializersXML.unit.cxx  DoubleMapSerializers.unit.cxx  DoubleMapSerializersFile.unit.cxx  DoubleMapSerializersJSON.unit.cxx  DoubleMapSerializersXML.unit.cxx  EdgeCases.unit.cxx  EnumMapSerializers.unit.cxx  EnumMapSerializersFile.unit.cxx  EnumMapSerializersJSON.unit.cxx  EnumMapSerializersXML.unit.cxx  EnumSerializers.unit.cxx  EnumSerializersFile.unit.cxx  EnumSerializersJSON.unit.cxx  EnumSerializersXML.unit.cxx  EnumeratorsBase.unit.cxx  FileFormat.unit.cxx  JSONNodeAdapter.unit.cxx  MapKeyAsEnumSerializers.unit.cxx  MapKeyAsStructureSerializers.unit.cxx  MapKeyAsStructureSerializersFile.unit.cxx  MapKeyAsStructureSerializersJSON.unit.cxx  MapKeyAsStructureSerializersXML.unit.cxx  MapSameChilds.unit.cxx  MapSerializers.unit.cxx  SetSerializers.unit.cxx  SetSerializersFile.unit.cxx  SetSerializersJSON.unit.cxx  SetSerializersXML.unit.cxx  StringMapSerializers.unit.cxx  StringMapSerializersFile.unit.cxx  StringMapSerializersJSON.unit.cxx  StringMapSerializersXML.unit.cxx  StructureMapSerializers.unit.cxx  (+13 more)
test/units/languages/: Amharic.unit.cxx  Arabic.unit.cxx  Armenian.unit.cxx  Bengali.unit.cxx  ChineseSimplified.unit.cxx  ChineseTraditional.unit.cxx  Czech.unit.cxx  Emoji.unit.cxx  English.unit.cxx  French.unit.cxx  Georgian.unit.cxx  German.unit.cxx  Greek.unit.cxx  Hebrew.unit.cxx  Hindi.unit.cxx  Japanese.unit.cxx  Korean.unit.cxx  LanguageTestHelper.hxx  Polish.unit.cxx  Portuguese.unit.cxx  Russian.unit.cxx  Serbian.unit.cxx  SerbianLatin.unit.cxx  Spanish.unit.cxx  Swedish.unit.cxx  Tamil.unit.cxx  Thai.unit.cxx  Turkish.unit.cxx  Ukrainian.unit.cxx  Vietnamese.unit.cxx
